--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,8 +38,7 @@ body {
   display: block;
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
   font-family: 'Lato', 'Poppins', sans-serif;
   background-color: var(--blueberry);
   color: var(--forest);
